// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Resource Link Complete example 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "fontFamily": "PT Sans Caption",
            "maxWidth": "1024px",
          }
        }
      >
        <div
          className="container"
        >
          <div
            className="title"
          >
            <span>
              Score Guides
            </span>
          </div>
          <div
            className="linkImg"
          >
            <a
              href="http://www.smarterbalanced.org/assessments/practice-and-training-tests/resources-and-documentation/#tab-3"
              target="__Blank"
            >
              <img
                alt="Score Guides"
                src="test-file-stub"
              />
            </a>
          </div>
          <div
            className="desc"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
          </div>
          <div>
            <a
              aria-label="Link"
              href="http://www.smarterbalanced.org/assessments/practice-and-training-tests/resources-and-documentation/#tab-3"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                className="container"
              >
                <span>
                  Visit Score Guides Page
                </span>
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="5"
                    x2="19"
                    y1="12"
                    y2="12"
                  />
                  <polyline
                    points="12 5 19 12 12 19"
                  />
                </svg>
              </div>
              <style
                jsx={true}
              >
                
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none;
        color: #ebebeb;
      }
      a:hover {
        text-decoration: underline;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      .container:hover {
        background: linear-gradient(90deg, #004266, #006298);
      }
      a div span {
        padding-right: 10px;
        font-size: 1.1em;
      }
    
              </style>
            </a>
          </div>
          <style
            jsx={true}
          >
            
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #0085AD;
        font-size: 25px;
        font-weight: 500;
      }
      .linkImg {
        padding: 0;
        border: 1px solid;
        height: 220px;
      }
      .linkImg img {
        width: 100%;
        height: 100%;
      }
      .desc {
        text-align: justify;
        font-size: 1em;
        height: 80px;
        margin-bottom: 20px;
      }
      @media (max-width: 800px) {
        .desc {
          height: auto;
        }
      }
    
          </style>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Resource Link Link button only 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "fontFamily": "PT Sans Caption",
            "maxWidth": "1024px",
          }
        }
      >
        <a
          aria-label="Link"
          href="http://www.smarterbalanced.org/assessments/practice-and-training-tests/resources-and-documentation/#tab-3"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="container"
          >
            <span>
              Visit Score Guides Page
            </span>
            <svg
              fill="none"
              height="24"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
              <polyline
                points="12 5 19 12 12 19"
              />
            </svg>
          </div>
          <style
            jsx={true}
          >
            
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none;
        color: #ebebeb;
      }
      a:hover {
        text-decoration: underline;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      .container:hover {
        background: linear-gradient(90deg, #004266, #006298);
      }
      a div span {
        padding-right: 10px;
        font-size: 1.1em;
      }
    
          </style>
        </a>
      </div>
    </div>
  </div>
</div>
`;
